--- a/VEN-03JAN2026/Operation-Absolute-Resolve-Map.html
+++ b/VEN-03JAN2026/Operation-Absolute-Resolve-Map.html
@@ -209,6 +209,10 @@
                 display: none !important;
             }
         
+            .leaflet-control-layers {
+                display: none !important;
+            }
+            
             .leaflet-bar a {
                 width: 24px !important;
                 height: 24px !important;
