--- a/VEN-03JAN2026/Operation-Absolute-Resolve-Map.html
+++ b/VEN-03JAN2026/Operation-Absolute-Resolve-Map.html
@@ -225,7 +225,7 @@
             
             .leaflet-popup-content {
                 margin: 10px !important;
-                width: auto !important;
+                width: 210px !important;
                 max-height: 300px;
                 overflow-y: auto;
             }
