--- a/VEN-03JAN2026/Operation-Absolute-Resolve-Map.html
+++ b/VEN-03JAN2026/Operation-Absolute-Resolve-Map.html
@@ -220,14 +220,8 @@
             }
 
             .leaflet-popup-content-wrapper {
-                max-width: 260px !important;
-            }
-            
-            .leaflet-popup-content {
-                margin: 10px !important;
-                width: 210px !important;
-                max-height: 300px;
-                overflow-y: auto;
+                width: 85vw !important;
+                max-width: 320px !important;
             }
         
             .leaflet-popup-content img, 
