--- a/VEN-03JAN2026/Operation-Absolute-Resolve-Map.html
+++ b/VEN-03JAN2026/Operation-Absolute-Resolve-Map.html
@@ -218,7 +218,14 @@
                 height: 24px !important;
                 line-height: 24px !important;
             }
-
+            
+            .leaflet-popup-content {
+                width: auto !important;
+                margin: 12px !important;
+                word-wrap: break-word;
+                white-space: normal !important; 
+            }
+            
             .leaflet-popup-content-wrapper {
                 width: 85vw !important;
                 max-width: 320px !important;
